k8s/redis-master-controller.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis-master
    labels:
        app: redis
        role: master
spec:
    replicas: 2
    selector:
        matchLabels:
            app: redis
            role: master
    template:
        metadata:
            labels:
                app: redis
                role: master
        spec:
            containers:
                - name: redis-master
                  image: "k8s.gcr.io/redis:e2e"
                  ports:
                      - name: redis-server
                        containerPort: 6379
