k8s/redis-master-service.yaml
kind: Service
apiVersion: v1
metadata:
    name: redis-master
    labels:
        app: redis
        role: master
spec:
    ports:
        - port: 6379
          targetPort: 6379
    selector:
        app: redis
        role: master
