k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: allcloud-exam
  name: allcloud-exam
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: allcloud-exam
  type: NodePort
status:
  loadBalancer: {}
